# janux

./: .gitignore  CONTRIBUTING.md  DEPENDENTS.md  README.md  environment.yml  janux.code-workspace  pyproject.toml
.github/workflows/: ci.yml  publish-noarch.yml
.vscode copy/: launch.json  settings.json
archive/: README.md
archive/2025-06-01_readme/: ARCHIVE_LOG.md
archive/2025-06-02_pyproject-unidep/: ARCHIVE_LOG.md  pyproject.toml
conda.recipe/: meta.yaml
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: conf.py  index.md
docs/api/: index.md
docs/guide/: cli-reference.md  configuration.md  getting-started.md  installation.md  usage.md
src/janux/: __init__.py  __main__.py  __version__.py  cli.py  errors.py
src/janux/cli/: __init__.py  init.py  main.py
src/janux/domain/: __init__.py
src/janux/initialization/: __init__.py  setup.py
tests/: conftest.py
tests/test_janux/: test_initialization_and_domain.py
