# ==================================================================================================
# Pyproject Configuration for Janux Package
# ==================================================================================================

# --- Build System Requirements --------------------------------------------------------------------

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


# --- Package Metadata -----------------------------------------------------------------------------

[project]
name = "janux"
version = "0.1.0"
authors = [{name = "Esther Poniatowski", email = "esther.poniatowski@ens.psl.eu"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Remote access manager for automating project-specific server connections"
keywords = ["automation", "server-management", "ssh", "remote-access"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
urls = {homepage = "https://github.com/esther-poniatowski/janux"}


# --- Dependencies ---------------------------------------------------------------------------------

requires-python = ">=3.12"

dependencies = [
    "paramiko",          # SSH protocol implementation
    "cryptography"       # Cryptographic recipes and primitives for key management
    "pyyaml",            # YAML configuration parsing
    "typer",             # CLI interface
    "rich",              # Improved CLI output formatting
]


# --- Package Source Code --------------------------------------------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- CLI Entry Points -----------------------------------------------------------------------------

[project.scripts]
janux = "janux.cli:main"
