# ==================================================================================================
# Pyproject Configuration for the Janux Package
# ==================================================================================================

# --- Build System Requirements --------------------------------------------------------------------

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


# --- Package Metadata -----------------------------------------------------------------------------

[project]
name = "janux"
version = "0.0.0"
authors = [{name = "Esther Poniatowski", email = "esther.poniatowski@ens.psl.eu"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Automates project-scoped SSH connections across remote servers."
keywords = ["automation", "server-management", "ssh", "remote-access"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
urls = {homepage = "https://github.com/esther-poniatowski/janux"}


# --- Dependencies ---------------------------------------------------------------------------------

requires-python = ">=3.12"

dependencies = [
    "paramiko",          # SSH protocol implementation
    "cryptography",      # Cryptographic recipes and primitives for key management
    "pyyaml",            # YAML configuration parsing
    "typer",             # CLI interface
    "rich",              # Improved CLI output formatting
]


# --- Package Source Code --------------------------------------------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- CLI Entry Points -----------------------------------------------------------------------------

[project.scripts]
janux = "janux.cli:app"

# --- Tool Configurations --------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
